download_central update

--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -224,6 +224,286 @@
       </tr>
       <tr>
         <td>
+          fr.wikibooks.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikibooks.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikibooks.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikibooks.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikinews.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikinews.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikinews.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikinews.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikiquote.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikiquote.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikiquote.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikiquote.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikisource.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikisource.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikisource.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikiversity.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikiversity.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikiversity.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikiversity.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikivoyage.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikivoyage.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikivoyage.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikivoyage.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2017-05-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wiktionary.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wiktionary.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wiktionary.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           nethackwiki.com
         </td>
         <td class='cell_center'>
@@ -254,110 +534,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nethackwiki.com")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          ru.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          y
-        </td>
-        <td class='cell_center'>
-          2017-03-01
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("ru.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("ru.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("ru.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          simple.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          y
-        </td>
-        <td class='cell_center'>
-          2016-12-01
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          simple.wikipedia.org_bak
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2017-04-01
-        </td>
-        <td class='cell_center'>
-        </td>
-        <td class='cell_center'>
-          &lt;&lt;NULL&gt;&gt;
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org_bak")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia.org_bak")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org_bak")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -393,41 +569,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("www.wikidata.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          zh.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          y
-        </td>
-        <td class='cell_center'>
-          2016-12-02
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("zh.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("zh.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("zh.wikipedia.org")'>Search</button>
         </td>
       </tr>
     </table>
