--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -151,16 +151,16 @@
         After the setup completes, you can visit these pages: 
         <dl>
           <dd>
-            <a href="https://simple.wikipedia.org/wiki/Gothic_architecture.html" id="xolnki_7" title="Gothic architecture">Gothic architecture</a>
+            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:Gothic_architecture.html" id="xolnki_7" title="Simple.wikipedia.org:Gothic architecture">Simple.wikipedia.org:Gothic architecture</a>
           </dd>
           <dd>
-            <a href="https://simple.wikipedia.org/wiki/Saturn_(planet).html" id="xolnki_8" title="Saturn (planet)">Saturn (planet)</a>
+            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:Saturn_(planet).html" id="xolnki_8" title="Simple.wikipedia.org:Saturn (planet)">Simple.wikipedia.org:Saturn (planet)</a>
           </dd>
           <dd>
-            <a href="https://simple.wikipedia.org/wiki/Chess.html" id="xolnki_9" title="Chess">Chess</a>
+            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:Chess.html" id="xolnki_9" title="Simple.wikipedia.org:Chess">Simple.wikipedia.org:Chess</a>
           </dd>
           <dd>
-            <a href="https://simple.wikipedia.org/wiki/World_History.html" id="xolnki_10" title="World History">World History</a>
+            <a href="http://xowa.org/home/wiki/Simple.wikipedia.org:World_History.html" id="xolnki_10" title="Simple.wikipedia.org:World History">Simple.wikipedia.org:World History</a>
           </dd>
         </dl>
       </dd>
