--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -256,7 +256,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.cfg.previous_grp")' title="reset to &quot;xowa.app.security&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.bldr.page_sync">
+            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.app.security">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.cfg.previous_grp__key_box' value='xowa.app.cfg.previous_grp'> <input type='hidden' id='xowa.app.cfg.previous_grp__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -342,8 +342,6 @@
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
-en.wikipedia.org/wiki/Huadu_District
-home/wiki/Dev/Command-line/Dumps
 home/wiki/Special:XowaDownloadCentral
 </textarea>
           </div><!-- HIDDEN:key,ctx -->
@@ -365,7 +363,7 @@ home/wiki/Special:XowaDownloadCentral
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.startup.tabs.previous_selected")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="2">
+            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="0">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_selected__key_box' value='xowa.app.startup.tabs.previous_selected'> <input type='hidden' id='xowa.app.startup.tabs.previous_selected__ctx_box' value='app'>
         </div><!-- DIV:help -->
