--- a/home/wiki/Wiki_setup/Haitian_wikis.html
+++ b/home/wiki/Wiki_setup/Haitian_wikis.html
@@ -101,14 +101,17 @@
               <a href="#ht.wikipedia.org"><span class="tocnumber">4.1</span> <span class="toctext">ht.wikipedia.org</span></a> 
               <ul>
                 <li class="toclevel-3 tocsection-12">
-                  <a href="#ht.wikipedia.org_Articles_.282016-07.29"><span class="tocnumber">4.1.1</span> <span class="toctext">ht.wikipedia.org Articles (2016-07)</span></a>
+                  <a href="#ht.wikipedia.org_Articles_.282017-05.29"><span class="tocnumber">4.1.1</span> <span class="toctext">ht.wikipedia.org Articles (2017-05)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-13">
-                  <a href="#ht.wikipedia.org_Images_.282016-07.29"><span class="tocnumber">4.1.2</span> <span class="toctext">ht.wikipedia.org Images (2016-07)</span></a>
+                  <a href="#ht.wikipedia.org_Source_.282017-05.29"><span class="tocnumber">4.1.2</span> <span class="toctext">ht.wikipedia.org Source (2017-05)</span></a>
+                </li>
+                <li class="toclevel-3 tocsection-14">
+                  <a href="#ht.wikipedia.org_Images_.282017-05.29"><span class="tocnumber">4.1.3</span> <span class="toctext">ht.wikipedia.org Images (2017-05)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-14">
+            <li class="toclevel-2 tocsection-15">
               <a href="#All_links"><span class="tocnumber">4.2</span> <span class="toctext">All links</span></a>
             </li>
           </ul>
@@ -133,7 +136,7 @@
       <dd>
         <dl>
           <dd>
-            Kreyòl ayisyen Wikipedia - Articles (2016-07) [81.82 MB]
+            Kreyòl ayisyen Wikipedia - Articles (2017-05) [94.56 MB]
           </dd>
         </dl>
       </dd>
@@ -142,7 +145,16 @@
       <dd>
         <dl>
           <dd>
-            Kreyòl ayisyen Wikipedia - Images (2016-07) [317.14 MB]
+            Kreyòl ayisyen Wikipedia - Wikitext (2017-05) [36.97 MB]
+          </dd>
+        </dl>
+      </dd>
+    </dl>
+    <dl>
+      <dd>
+        <dl>
+          <dd>
+            Kreyòl ayisyen Wikipedia - Images (2017-05) [686.21 MB]
           </dd>
         </dl>
       </dd>
@@ -219,27 +231,157 @@
       <span class="mw-headline" id="ht.wikipedia.org">ht.wikipedia.org</span>
     </h3>
     <h4>
-      <span class="mw-headline" id="ht.wikipedia.org_Articles_.282016-07.29">ht.wikipedia.org Articles (2016-07)</span>
+      <span class="mw-headline" id="ht.wikipedia.org_Articles_.282017-05.29">ht.wikipedia.org Articles (2017-05)</span>
     </h4>
     <div style="margin-left: 2em">
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_core.zip</a>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_core.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_html.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_html.zip</a>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.link_title_ns.000_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.link_title_ns.000_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.link_title_ns.999_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.link_title_ns.999_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.category.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.category.core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.category.link_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.category.link_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.000.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.004.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.004.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.014.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.014.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.012.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.012.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.008.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.006.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.006.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.010.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.010.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.828.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.828.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.fulltext_search.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.fulltext_search.001.zip</a>
         </li>
       </ul>
     </div>
     <h4>
-      <span class="mw-headline" id="ht.wikipedia.org_Images_.282016-07.29">ht.wikipedia.org Images (2016-07)</span>
+      <span class="mw-headline" id="ht.wikipedia.org_Source_.282017-05.29">ht.wikipedia.org Source (2017-05)</span>
     </h4>
     <div style="margin-left: 2em">
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_file.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_file.zip</a>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.000.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.010.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.010.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.008.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.004.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.004.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.014.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.014.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.012.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.012.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.006.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.006.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.828.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.828.zip</a>
+        </li>
+      </ul>
+    </div>
+    <h4>
+      <span class="mw-headline" id="ht.wikipedia.org_Images_.282017-05.29">ht.wikipedia.org Images (2017-05)</span>
+    </h4>
+    <div style="margin-left: 2em">
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.000_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.000_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.004_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.004_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.014_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.014_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.010_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.010_db.001.zip</a>
         </li>
       </ul>
     </div>
@@ -247,9 +389,34 @@
       <span class="mw-headline" id="All_links">All links</span>
     </h3>
 <pre style='height: 10pc; overflow-y: scroll;'>
-http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_core.zip
-http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_html.zip
-http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2016-07_file.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_core.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.core.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.link_title_ns.000_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.search.link_title_ns.999_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.000.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.004.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.014.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.012.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.008.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.006.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.010.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_html_ns.828.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.category.core.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.category.link_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_xtn.fulltext_search.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_core.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.000_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.004_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.014_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_file_ns.010_db.001.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.000.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.010.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.008.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.004.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.014.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.012.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.006.zip
+http://archive.org/download/Xowa_htwiki_latest/Xowa_htwiki_2017-05_text_ns.828.zip
 
 </pre>
   
